--- a/media.html
+++ b/media.html
@@ -50,7 +50,7 @@
 
         <!--Instagram Photo 1 -->
           <div class="row">
-            <div class="col-sm-3">
+            <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="mipso-instagram" data-title="Wood practicing before tonight's show in Asheville">
               <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
               </a>
@@ -84,39 +84,46 @@
         <!--Instagram Photo 6 -->
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="mipso-instagram" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
-              <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
+              </a>
             </div>
         <!--Instagram Photo 7 -->
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="mipso-instagram" data-title="Look mama, we've made it.">
-              <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
+              </a>
             </div>
         <!--Instagram Photo 8 -->
             <div class="col-xs-12 col-sm-3">
                 <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="mipso-instagram" data-title="Vermont in August is the place to be.">
                   <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
+                </a>
             </div>
           </div>
         <!--Instagram Photo 9 -->
         <div class="row instagram lower">
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="mipso-instagram" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
-              <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
+              </a>
             </div>
         <!--Instagram Photo 10 -->
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="mipso-instagram" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
-              <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
+              </a>
             </div>
         <!--Instagram Photo 11 -->
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="mipso-instagram" data-title="Chicago didn't disappoint - and it never does!">
-              <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
+              </a>
             </div>
         <!--Instagram Photo 12 -->
             <div class="col-xs-12 col-sm-3">
               <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="mipso-instagram" data-title="Come hang out with us in Brooklyn">
-              <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
+                <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
+              </a>
             </div>
           </div>
       </section>
