--- a/about.html
+++ b/about.html
@@ -45,6 +45,9 @@
   <div class="container">
     <div class="row about-section">
       <div class="col-md-6"<p>Chapel Hill’s indie Americana quartet Mipso – Jacob Sharp (mandolin, vocals), Wood Robinson (bass, vocals), Joseph Terrell (guitar, vocals), and Libby Rodenbough (fiddle, vocals) – release their fifth album, Edges Run, on April 6th, 2018 via a newly inked record deal with AntiFragile Music. Influenced by the contradiction of its progressive home and the surrounding rural southern landscapes, Mipso has been hailed as “hewing surprisingly close to gospel and folk while still sounding modern and secular” (Acoustic Guitar) and was recently recognized by Rolling Stone as an “ Artist You Need to Know.” The band brings a distinctly unique sound – full of wistful beauty, hopeful undercurrents, and panoramic soundscapes.</p>
+      <p>
+        While students at UNC-Chapel Hill, guitarist Joseph Terrell and mandolin player Jacob Sharp began performing at Chapel Hill open mic nights as an acoustic duo. With the idea of forming a band to play folk and bluegrass, they approached bassist Wood Robinson, with whom Terrell had previously performed in a campus party band, Funkosaurus Rex. Billed as "Mipso Trio," the group began performing in 2011 at campus events and occasionally around North Carolina.
+      </p>
       <p>Venturing ever-further from its string-band pedigree to discover a broader Americana where classic folk-rock and modern alt-country sounds mingle easily with Appalachian tradition, Mipso’s music is lush and forward moving, with lyrics that sear and salve in turn.  Look for Mipso on tour this spring in support of their new release, Edges Run.</p>
       </div>
       <div class="col-md-6">
